--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "initial-demo",
+  "name": "pokemon-static",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.7",
+    "@nextui-org/react": "^1.0.0-beta.9",
+    "axios": "^0.27.2",
+    "canvas-confetti": "^1.5.1",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "sharp": "^0.30.6"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.4.2",
+    "@types/node": "17.0.42",
+    "@types/react": "18.0.12",
+    "@types/react-dom": "18.0.5",
     "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "typescript": "4.7.3"
   }
 }
