--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.9",
+    "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "canvas-confetti": "^1.5.1",
     "next": "12.1.6",
